update dockerfile, raml base, and gitattributes